--- a/styles/index.css
+++ b/styles/index.css
@@ -14,22 +14,34 @@
 @tailwind components;
 @tailwind utilities;
 
-dl.dl-table:before,
-dl.dl-table:after {
-  display: table;
-  content: "";
-  line-height: 0;
+input:focus {
+  box-shadow: none !important;
 }
-dl.dl-table dt {
-  float: left;
-  clear: left;
-  text-align: left;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  padding: 0.25rem 0;
-  margin-right: 1rem;
+
+details summary {
+  @apply font-title text-lg;
+  @apply pl-5 relative w-full cursor-pointer;
 }
-dl.dl-table dd {
-  padding: 0.25rem 0;
+details summary:after {
+  content: "+";
+  @apply font-semibold text-2xl;
+  @apply absolute left-0 -top-1;
+  @apply transition-transform;
+}
+details[open] summary:after {
+  transform: rotate(45deg);
+}
+details[open] summary ~ * {
+  animation: details-open-close 0.3s ease-in-out;
+}
+details summary::-webkit-details-marker {
+  display: none;
+}
+@keyframes details-open-close {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
